..F....... [ZBX-26048] fixed long error titles visibility on the Frontend in modal window

--- a/sass/stylesheets/sass/components/_message-box.scss
+++ b/sass/stylesheets/sass/components/_message-box.scss
@@ -1,16 +1,17 @@
 output {
 	position: relative;
 	box-sizing: border-box;
-	display: grid;
-	align-items: center;
+	display: block;
 	flex-shrink: 0;
 	min-height: 48px;
-	padding: 6px 10px;
+	padding: 6px 20px 6px 10px;
 	margin: 10px;
 	background: $ui-bg-color;
 	border-style: solid;
 	border-width: 2px 2px 2px 60px;
 	border-radius: 4px;
+	word-break: break-all;
+	white-space: normal;
 
 	&::before {
 		@extend %icons-font;
@@ -25,6 +26,18 @@ output {
 
 	> span {
 		font-size: $font-h4-size;
+		padding-left: 10px;
+		max-height: 15px;
+	}
+
+	> a,
+	> span {
+		display: inline-block;
+		transition: transform 0.3s ease;
+	}
+
+	> div {
+		margin-top: 6px;
 	}
 
 	.msg-buttons {
@@ -105,7 +118,13 @@ output {
 			grid-template-rows: 32px 0fr;
 			grid-row-gap: 0;
 
+			> a,
+			> span {
+				transform: scaleY(1) translateY(50%);
+			}
+
 			.msg-details {
+				display: none;
 				padding-top: 0;
 				border-top: none;
 				opacity: 0;
